# qa_guru_hw16

./: .gitignore  pyproject.toml
