[project]
name = "qa-guru-hw16"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrey Okatev",email = "okatev87@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selene (>=1.0.2,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"

